# lorien

./: .gitignore  BUILD.md  CHANGELOG.md  LICENSE  PROMPT.md  README.md  THEORY.md  build_backend.py  demo_killer.py  pyproject.toml
src/lorien/: __init__.py  cli.py  concurrency.py  contradiction.py  ingest.py  memory.py  models.py  query.py  schema.py  serve.py  temporal.py  vectors.py
src/lorien/integrations/: langchain.py
tests/: conftest.py  test_contradiction.py  test_decisions.py  test_ingest.py  test_integration_v03.py  test_langchain.py  test_memory.py  test_multiagent.py  test_query.py  test_schema.py  test_temporal.py  test_v04.py  test_vectors.py
