[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lorien-memory"
version = "0.3.0"
description = "Local-first personal knowledge graph for AI agents — ontology, causal chains, contradiction detection"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [{ name = "paperbags1103-hash" }]
keywords = [
    "ai", "agents", "memory", "knowledge-graph", "ontology",
    "kuzu", "llm", "contradiction-detection", "local-first"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Database",
]

dependencies = [
    "kuzu>=0.8.0",
    "click>=8.0",
]

[project.optional-dependencies]
vectors   = ["sentence-transformers>=2.7.0", "numpy>=1.24"]
llm       = ["openai>=1.0"]
langchain = ["langchain>=0.2"]
all       = ["sentence-transformers>=2.7.0", "numpy>=1.24", "openai>=1.0", "langchain>=0.2"]
dev       = ["pytest>=8.0", "hatchling"]

[project.urls]
Homepage   = "https://github.com/paperbags1103-hash/lorien"
Repository = "https://github.com/paperbags1103-hash/lorien"
Issues     = "https://github.com/paperbags1103-hash/lorien/issues"

[project.scripts]
lorien = "lorien.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/lorien"]

[tool.hatch.build.targets.sdist]
include = ["src/", "tests/", "README.md", "LICENSE"]
